Added category pages.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 plugins:
   - jekyll-feed
+  - jekyll-category-pages
 title: Robert Nickel's blog
 description: Welcome to my blog
 author: Robert Nickel
+permalink: /:year/:month/:day/:title:output_ext
