--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ plugins:
   - jekyll-feed
   - jekyll-category-pages
   - jekyll-paginate
-title: Robert Nickel's blog
-description: Welcome to my blog
+title: Robert Nickel's Blog
+description: Software Engineer, Agile Advocate and Things Doer
 author: Robert Nickel
 permalink: /:year/:month/:day/:title:output_ext
-include: ['/.well-known/brave-rewards-verification.txt']
+include: ['.well-known/brave-rewards-verification.txt']
