--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ title: Robert Nickel's Blog
 description: Software Engineer, Agile Advocate and Things Doer
 author: Robert Nickel
 permalink: /:year/:month/:day/:title:output_ext
-include: ['.well-known/brave-rewards-verification.txt']
+include: ['.well-known']
