--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,4 +1,5 @@
-about-text: Hello, I am Robert Nickel<br> Software Engineer, Agile Advocate & Things Doer.
+about-text: I am Robert Nickel<br> Software Engineer, Agile Advocate & Things Doer.
+contact-text: As a trained and experienced professional I will join your journey to the digital product you always dreamed of.<br><br> Lets get in touch and talk about your ideas, questions and wishes.
 details:
   age: 27
   location: Constance, Germany
