--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,jekyll
 
 ### Jekyll ###
-public
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
@@ -125,3 +124,4 @@ dist
 .vscode-test
 
 # End of https://www.toptal.com/developers/gitignore/api/node,jekyll
+.DS_Store
