--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,15 +1,15 @@
-- title: Your Website
-  description: I build your Website, whether its a personal blog or your businesses online presence.
+- title: Websites
+  description: I build your website, whether its a personal blog or your businesses online presence.
   icon: '<i class="fas text-white text-xl fa-globe-americas"></i>'
+
+- title: Online Shops
+  description: You want to sell your goods online? Lets kickstart together!
+  icon: '<i class="fas text-white text-xl fa-newspaper"></i>'
+
+- title: App Development
+  description: I make your product idea real, I cover everything from ideation to operation.
+  icon: '<i class="fas text-white text-xl fa-rocket"></i>'
 
 - title: Agile Coaching
   description: I join your team and help you adopting useful agile practices.
   icon: '<i class="fas text-white text-xl fa-flag-checkered"></i>'
-
-- title: App Development
-  description: I make your product idea real, whether its a webapp or a native app.
-  icon: '<i class="fas text-white text-xl fa-rocket"></i>'
-
-- title: Blogging
-  description: I blog about software engineering, agile practices and quality assurance.
-  icon: '<i class="fas text-white text-xl fa-newspaper"></i>'
