Changed my age.

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,6 +1,7 @@
-about-text: I am Robert Nickel<br> Software Engineer, Agile Advocate & Things Doer.
+about-text: I am Robert Nickel<br> Software Engineer and Agile Advocate.
 contact-text: As a trained and experienced professional I will join your journey to the digital product you always dreamed of.<br><br> Lets get in touch and talk about your ideas, questions and wishes.
 details:
-  age: 27
+  age: 29
   location: Constance, Germany
-  occupation: Student of Software Engineering<br> Master of Science
+  occupation: Software Engineer and Computer Scientist
+  degree: Master of Science
