--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -3,8 +3,9 @@ image: /assets/images/profile.png
 designations:
   - Agile Advocate
   - Software Engineer
-  - Unfrequent Blogger
-  - Things Doer
+  - Blogger
+  - Computer Scientist
+  - Wannabe Founder
 
 social:
   - title: LinkedIn
