--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,4 +1,4 @@
-about-text: I am Robert Nickel<br> Software Engineer and Agile Advocate.
+about-text: I am Robert Nickel<br> Software Engineer, Master of (Computer) Science and Agile Advocate.
 contact-text: As a trained and experienced professional I will join your journey to the digital product you always dreamed of.<br><br> Lets get in touch and talk about your ideas, questions and wishes.
 details:
   age: 29
