new profile pic

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,5 +1,5 @@
 name: Robert Nickel
-image: /assets/images/profile.png
+image: /assets/images/profile.jpg
 designations:
   - Agile Advocate
   - Software Engineer
