--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -7,6 +7,8 @@ designations:
   - Computer Scientist
   - Functional Programmer
   - Wannabe Founder
+  - Commit message Author
+  - Slow Thinker
 
 social:
   - title: LinkedIn
