--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,11 +1,3 @@
-- title: Websites
-  description: I build your website, whether its a personal blog or your businesses online presence.
-  icon: '<i class="fas text-white text-xl fa-globe-americas"></i>'
-
-- title: Online Shops
-  description: You want to sell your goods online? Lets kickstart together!
-  icon: '<i class="fas text-white text-xl fa-newspaper"></i>'
-
 - title: App Development
   description: I make your product idea real, I cover everything from ideation to operation.
   icon: '<i class="fas text-white text-xl fa-rocket"></i>'
@@ -13,3 +5,7 @@
 - title: Agile Coaching
   description: I join your team and help you adopting useful agile practices.
   icon: '<i class="fas text-white text-xl fa-flag-checkered"></i>'
+
+- title: Work for your Company
+  description: If your company has a great culture and creates valuable digital products, I could work for you.
+  icon: '<i class="fas text-white text-xl fa-person-digging"></i>'
