--- a/_data/services.yml
+++ b/_data/services.yml
@@ -8,4 +8,4 @@
 
 - title: Work for your Company
   description: If your company has a great culture and creates valuable digital products, I could work for you.
-  icon: '<i class="fas text-white text-xl fa-person-digging"></i>'
+  icon: '<i class="fas text-white text-xl fa-solid fa-briefcase-blank"></i>'
