--- a/_data/services.yml
+++ b/_data/services.yml
@@ -3,9 +3,10 @@
   icon: '<i class="fas text-white text-xl fa-rocket"></i>'
 
 - title: Agile Coaching
-  description: I join your team and help you adopting useful agile practices.
+  description: I could join your team and help you adopting useful agile practices.
   icon: '<i class="fas text-white text-xl fa-flag-checkered"></i>'
 
 - title: Work for your Company
   description: If your company has a great culture and creates valuable digital products, I could work for you.
-  icon: '<i class="fas text-white text-xl fa-solid fa-briefcase-blank"></i>'
+  icon: '<i class="fas text-white text-xl fa-solid fa-briefcase"></i>'
+
