--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,14 +1,15 @@
 name: Robert Nickel
 image: /assets/images/profile.jpg
 designations:
-  - Agile Advocate
-  - Software Engineer
+  - Agile advocate
+  - Software engineer
   - Blogger
-  - Computer Scientist
-  - Functional Programmer
-  - Wannabe Founder
-  - Commit message Author
-  - Slow Thinker
+  - Computer scientist
+  - Functional programmer
+  - Wannabe founder
+  - Commit message author
+  - Slow thinker
+  - Master of Science
 
 social:
   - title: LinkedIn
