--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,4 +1,4 @@
-about-text: Hi, I am Robert Nickel.<br> Software Engineer, Master of Science and Agile Advocate.<br> Im open for job offerings starting August 2022.
+about-text: Hi, I am Robert Nickel.<br> Software Engineer, Master of Science and Agile Advocate.<br><br> <b>Im open for job offerings starting August 2022.</b>
 contact-text: As a trained and experienced professional I will join your journey to the digital product you always dreamed of.<br><br> Lets get in touch and talk about your ideas, questions and wishes.
 details:
   occupation: Software Engineer and Computer Scientist
