--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,5 +1,5 @@
 about-text: Hi, I am Robert Nickel.<br> Software Engineer, Master of Science and Agile Advocate.<br><br> <b>Im open for job offerings starting August 2022.</b>
-contact-text: If you need help with one of your projects, wish to hire me or discuss whatever, feel free to contact me. But be aware - I might ask dumb question.
+contact-text: If you need help with one of your projects or wish to hire me, feel free to contact me. But be aware - I might ask dumb question.
 details:
   occupation: Software Engineer and Computer Scientist
   location: Constance, Germany
