--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -27,9 +27,9 @@ social:
 sidebar-links:
   - title: Blog
     link: /blog/
-  - title: Portfolio
+  - title: Work
     link: /works/
-  - title: Contact me
+  - title: Contact
     link: /contact/
   - title: Impressum
     link: /impressum/
