--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -2,7 +2,7 @@ name: Robert Nickel
 image: /assets/images/profile.jpg
 designations:
   - Agile advocate
-  - Software engineer
+  - Software Engineer
   - Blogger
   - Computer scientist
   - Functional programmer
