--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -28,6 +28,6 @@ sidebar-links:
   - title: Blog
     link: /blog/
   - title: Work
-    link: /works/
+    link: /work/
   - title: Impressum
     link: /impressum/
