--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,3 +1,11 @@
+- title: "Homo Deus"
+  author: Noah Yuval Harari
+  year: 2022
+
+- title: "The Cafe on the Edge of the World: A Story About the Meaning of Life"
+  author: John Strelicky
+  year: 2022
+
 - title: "Humankind: A Hopeful History"
   author: Rutger Bregman
   year: 2022
