--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,13 +1,12 @@
 name: Robert Nickel
 image: /assets/images/profile.jpg
 designations:
-  - Agile advocate
-  - Software Engineer
-  - Blogger
+  - Agile Software Engineer
   - Computer scientist
-  - Functional programmer
+  - Reactive programmer
   - Wannabe founder
   - Commit message author
+  - Good listener
   - Slow thinker
   - Master of Science
 
