--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,11 +1,7 @@
 - title: Work for your Company
-  description: If your company has a great culture and creates valuable digital products, I could work for you.
-  icon: '<i class="fas text-white text-xl fa-solid fa-briefcase"></i>'
-
+  description: If your company has a great culture and creates valuable digital products, or deeply wishes to, I could work for you.
+  icon: '<i class="fas text-white text-xl fa-flag-checkered"></i>'
+  
 - title: App Development
   description: I make your product idea real, I cover everything from ideation to operation.
   icon: '<i class="fas text-white text-xl fa-rocket"></i>'
-
-- title: Agile Coaching
-  description: I could join your team and help you adopting useful agile practices.
-  icon: '<i class="fas text-white text-xl fa-flag-checkered"></i>'
